# wlr-chooser

./: .gitignore  CHANGELOG.md  COMPATIBILITY.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  RELEASING.md  dist-workspace.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  deb.yml  publish.yml
crates/wlr-capture/: Cargo.toml  README.md  build.rs  i18n.toml
crates/wlr-capture/i18n/de/: wlr_capture.ftl
crates/wlr-capture/i18n/en/: wlr_capture.ftl
crates/wlr-capture/i18n/es/: wlr_capture.ftl
crates/wlr-capture/i18n/fr/: wlr_capture.ftl
crates/wlr-capture/i18n/it/: wlr_capture.ftl
crates/wlr-capture/i18n/ja/: wlr_capture.ftl
crates/wlr-capture/i18n/ko/: wlr_capture.ftl
crates/wlr-capture/i18n/nl/: wlr_capture.ftl
crates/wlr-capture/i18n/pl/: wlr_capture.ftl
crates/wlr-capture/i18n/pt-BR/: wlr_capture.ftl
crates/wlr-capture/i18n/ru/: wlr_capture.ftl
crates/wlr-capture/i18n/uk/: wlr_capture.ftl
crates/wlr-capture/i18n/zh-CN/: wlr_capture.ftl
crates/wlr-capture/src/: audio.rs  capture.rs  clipboard.rs  diff.rs  doctor.rs  error.rs  focus.rs  gl.rs  i18n.rs  icons.rs  lib.rs  mirror.rs  overlay.rs  paths.rs  render.rs  sink.rs  stream.rs  theme.rs  video.rs  wl.rs
crates/wlr-chooser/: Cargo.toml  README.md  build.rs
crates/wlr-chooser/i18n/de/: wlr_chooser.ftl
crates/wlr-chooser/i18n/en/: wlr_chooser.ftl
crates/wlr-chooser/i18n/es/: wlr_chooser.ftl
crates/wlr-chooser/i18n/fr/: wlr_chooser.ftl
crates/wlr-chooser/i18n/it/: wlr_chooser.ftl
crates/wlr-chooser/i18n/ja/: wlr_chooser.ftl
crates/wlr-chooser/i18n/ko/: wlr_chooser.ftl
crates/wlr-chooser/i18n/nl/: wlr_chooser.ftl
crates/wlr-chooser/i18n/pl/: wlr_chooser.ftl
crates/wlr-chooser/i18n/pt-BR/: wlr_chooser.ftl
crates/wlr-chooser/i18n/ru/: wlr_chooser.ftl
crates/wlr-chooser/i18n/uk/: wlr_chooser.ftl
crates/wlr-chooser/i18n/zh-CN/: wlr_chooser.ftl
crates/wlr-chooser/src/: chooser_cli.rs  i18n.rs  lib.rs  main.rs  shell.rs  switcher_cli.rs  ui.rs
crates/wlr-draw/: Cargo.toml  README.md  build.rs
crates/wlr-draw/i18n/de/: wlr_draw.ftl
crates/wlr-draw/i18n/en/: wlr_draw.ftl
crates/wlr-draw/i18n/es/: wlr_draw.ftl
crates/wlr-draw/i18n/fr/: wlr_draw.ftl
crates/wlr-draw/i18n/it/: wlr_draw.ftl
crates/wlr-draw/i18n/ja/: wlr_draw.ftl
crates/wlr-draw/i18n/ko/: wlr_draw.ftl
crates/wlr-draw/i18n/nl/: wlr_draw.ftl
crates/wlr-draw/i18n/pl/: wlr_draw.ftl
crates/wlr-draw/i18n/pt-BR/: wlr_draw.ftl
crates/wlr-draw/i18n/ru/: wlr_draw.ftl
crates/wlr-draw/i18n/uk/: wlr_draw.ftl
crates/wlr-draw/i18n/zh-CN/: wlr_draw.ftl
crates/wlr-draw/src/: autostart.rs  i18n.rs  ipc.rs  keymap.rs  lib.rs  main.rs  overlay.rs  proto.rs  tray.rs
crates/wlr-i18n/: Cargo.toml  README.md
crates/wlr-i18n/src/: lib.rs
crates/wlr-peek/: Cargo.toml  README.md  build.rs
crates/wlr-peek/i18n/de/: wlr_peek.ftl
crates/wlr-peek/i18n/en/: wlr_peek.ftl
crates/wlr-peek/i18n/es/: wlr_peek.ftl
crates/wlr-peek/i18n/fr/: wlr_peek.ftl
crates/wlr-peek/i18n/it/: wlr_peek.ftl
crates/wlr-peek/i18n/ja/: wlr_peek.ftl
crates/wlr-peek/i18n/ko/: wlr_peek.ftl
crates/wlr-peek/i18n/nl/: wlr_peek.ftl
crates/wlr-peek/i18n/pl/: wlr_peek.ftl
crates/wlr-peek/i18n/pt-BR/: wlr_peek.ftl
crates/wlr-peek/i18n/ru/: wlr_peek.ftl
crates/wlr-peek/i18n/uk/: wlr_peek.ftl
crates/wlr-peek/i18n/zh-CN/: wlr_peek.ftl
crates/wlr-peek/src/: i18n.rs  lib.rs  main.rs
crates/wlr-pip/: Cargo.toml  README.md
crates/wlr-pip/src/: host.rs  main.rs  pip.rs
crates/wlr-shot/: Cargo.toml  README.md  build.rs
crates/wlr-shot/i18n/de/: wlr_shot.ftl
crates/wlr-shot/i18n/en/: wlr_shot.ftl
crates/wlr-shot/i18n/es/: wlr_shot.ftl
crates/wlr-shot/i18n/fr/: wlr_shot.ftl
crates/wlr-shot/i18n/it/: wlr_shot.ftl
crates/wlr-shot/i18n/ja/: wlr_shot.ftl
crates/wlr-shot/i18n/ko/: wlr_shot.ftl
crates/wlr-shot/i18n/nl/: wlr_shot.ftl
crates/wlr-shot/i18n/pl/: wlr_shot.ftl
crates/wlr-shot/i18n/pt-BR/: wlr_shot.ftl
crates/wlr-shot/i18n/ru/: wlr_shot.ftl
crates/wlr-shot/i18n/uk/: wlr_shot.ftl
crates/wlr-shot/i18n/zh-CN/: wlr_shot.ftl
crates/wlr-shot/src/: i18n.rs  lib.rs  main.rs
crates/wlr-utils/: Cargo.toml  README.md
docs/: RELEASING.md  index.md  wlr-draw-keys.toml
docs/themes/: catppuccin-frappe.toml  catppuccin-latte.toml  catppuccin-macchiato.toml  catppuccin-mocha.toml  dracula.toml  gruvbox-dark.toml  nord.toml  tokyo-night.toml
i18n/de/: wlr_chooser.ftl
i18n/en/: wlr_chooser.ftl
i18n/es/: wlr_chooser.ftl
i18n/fr/: wlr_chooser.ftl
i18n/it/: wlr_chooser.ftl
i18n/ja/: wlr_chooser.ftl
i18n/ko/: wlr_chooser.ftl
i18n/nl/: wlr_chooser.ftl
i18n/pl/: wlr_chooser.ftl
i18n/pt-BR/: wlr_chooser.ftl
i18n/ru/: wlr_chooser.ftl
i18n/uk/: wlr_chooser.ftl
i18n/zh-CN/: wlr_chooser.ftl
packaging/aur/: PKGBUILD  PKGBUILD-bin
src/: i18n.rs  main.rs  shell.rs  ui.rs  wl.rs
tools/screenshots/: .gitignore  README.md  capture.sh  cdp.py  foot.ini  lib.sh  nested-sway.conf
tools/screenshots/pointer/: Cargo.toml  main.rs
tools/screenshots/scenes/: chooser.sh  draw-present.sh  draw.sh  mirror.sh  peek-cli.sh  peek.sh  shot.sh  switcher.sh
