[package]
name = "wlr-draw"
description = "Draw and annotate live on screen on wlroots compositors — a gromit-mpx-style overlay driven over a control socket"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "README.md"
keywords = ["wayland", "wlroots", "annotation", "screen-drawing", "sway"]
categories = ["command-line-utilities", "multimedia"]

[[bin]]
name = "wlr-draw"
path = "src/main.rs"

[features]
default = ["i18n", "tray"]
# Localised UI (the on-screen HUD hints) via Fluent. On by default; `--no-default-features`
# builds English-only with no Fluent dependency.
i18n = ["wlr-i18n/i18n", "dep:rust-embed"]
# StatusNotifierItem tray icon (status + a click-to-toggle menu) via `ksni`. On by
# default; links system `libdbus`. `--no-default-features` drops it (no D-Bus).
tray = ["dep:ksni"]

[dependencies]
# The shared engine: the egui/EGL `render::Gpu`, theme and the `tr!` macro (`toolkit`),
# plus the one-shot output capture (`compose`) used for the freeze-frame backdrop. The
# overlay is otherwise a transparent vector layer (no live stream).
wlr-capture = { path = "../wlr-capture", version = "1.3.2", default-features = false, features = ["toolkit", "compose"] }
# This crate owns its own localised catalog (`i18n/`); wlr-i18n is the shared loader plumbing.
wlr-i18n = { path = "../wlr-i18n", version = "1.3.2", default-features = false }
# For the `#[derive(RustEmbed)]` over this crate's `i18n/` folder (the `i18n` feature).
rust-embed = { workspace = true, optional = true }
anyhow.workspace = true
clap.workspace = true
egui.workspace = true
# Configurable keybindings (`~/.config/wlr-draw/keys.toml`): TOML + serde for the file,
# xkbcommon for XKB keysym <-> name parsing (the names sway/Hyprland `bindsym` use).
# xkbcommon is already linked transitively via smithay-client-toolkit (no new system dep).
toml.workspace = true
serde.workspace = true
xkbcommon.workspace = true
# Layer-shell windowing + the calloop event loop (reused via sctk's reexports), so the
# control socket and Wayland events drive one loop together.
smithay-client-toolkit.workspace = true
wayland-client.workspace = true
# StatusNotifierItem tray icon (the `tray` feature). Links system libdbus.
# StatusNotifierItem tray (the `tray` feature). 0.3+ is async (zbus 5); use its
# `blocking` API over the `async-io` backend so the calloop daemon stays synchronous.
ksni = { version = "0.3", optional = true, default-features = false, features = [
    "blocking",
    "async-io",
] }

# Generates the English fallback table for the `--no-default-features` (no-Fluent) build.
[build-dependencies]
wlr-i18n = { path = "../wlr-i18n", version = "1.3.2", default-features = false }

[package.metadata.deb]
maintainer = "Stéphane Jourdois <stephane@jourdois.fr>"
section = "utils"
priority = "optional"
license-file = ["../../LICENSE-MIT", "0"]
depends = "$auto, libegl1"
extended-description = """\
A live screen annotation tool for wlroots compositors, in the spirit of gromit-mpx: a \
transparent always-on-top overlay you draw on with freehand strokes, lines, rectangles, \
ellipses, arrows and text. A daemon holds the overlay; further invocations \
(`wlr-draw toggle`, `--clear`, `--undo`, `tool`, `color`…) drive it over a control \
socket, so you bind them to compositor keys."""
assets = [
    ["../../target/release/wlr-draw", "usr/bin/", "755"],
    ["README.md", "usr/share/doc/wlr-draw/README.md", "644"],
]

[package.metadata.dist]
# Bundled into the `wlr-utils` crate for prebuilt archives/installers; not shipped as a
# standalone prebuilt app (still published to crates.io for à-la-carte `cargo install`).
dist = false
